--- a/article/Article.tex
+++ b/article/Article.tex
@@ -77,28 +77,25 @@ address the following deficits of the existing wrappers (and others):
 \begin{itemize}
   \item  ITK is a huge library, but only a small number of classes are available
 in target languages. It become quickly frustrating for the user, especially when
-he have to spend lot of time to extend the current set of classes. Even if it is
+he has to spend lot of time to extend the current set of classes. Even if it is
 not yet complete, the WrapITK's set of classes have been highly extended. Moreover,
 the user can choose at build time which types and which dimensions he want to wrap.
 
   \item  The template arguments set is poorly choosen, making sometime impossible
 to create a pipeline. In WrapITK, most of the filters have the same input and output
-types. Only a few filters allow to change type. This make the types manipulated 
-by filters more consistent.
-
-  \item  The python's \verb$InsightToolkit$ module is only strucutred as a big list
-of names. This make it nearly unusable in the python interpreter. The python's
-module organization is completely changed to be more structured and flexible.
+types, and only a few filters allow to change type. This make the types manipulated 
+by filters more consistent, and the user should always be able to build his pipeline.
 
   \item  Lots of types returned by ITK object's methods are not usable in target
 languages. For example, the \verb$GetPixel()$ method of the class \verb$itk::Image$
 returns a string describing a pointer, but don't return the pixel value. In WrapITK,
 most types used in classes are available in target languages.
 
-  \item  Names in target laguages are inconsistents.
+  \item  Names in target laguages are inconsistents. WrapITK use a strict naming
+convention which should make easier to identify the template arguments.
 
   \item  The ITK wrapping system is difficult to understand and maintain. WrapITK was
-written -- and thoroughly documented -- to be as easy as possible to understand,
+written - and thoroughly documented - to be as easy as possible to understand,
 maintain, and extend.
 
   \item  It is non-trivial to add wrappers for different ITK classes to the system. In
@@ -110,19 +107,21 @@ external C++ classes that interact with ITK. WrapITK provides explicit hooks for
 external C++ classes to be wrapped and even installed in the WrapITK tree so
 that they interact seamlessly with the other wrapped classes.
 
-  \item  Once the ITK wrappers are built, using them from within the target languages
-is in many cases painful, forcing Python code (for example) to look a lot like
-C++ code, but nastier. In particular, template types must be hard-coded into
-every function name. WrapITK attempts to address this in Python by providing
-run-time lookup of templated types. Additionally, WrapITK ensures that
-\verb$SmartPointer$s are always returned and acceptable as input, so no bare pointers
-are ever exposed to Python. This is not the case in the standard ITK wrappers.
+  \item  The python's \verb$InsightToolkit$ module is only structured as a big
+list of names. It make it nearly unusable in the python interpreter. WrapITK
+comes with a new well designed python module easy to use in interpreter, and
+aproviding run-time lookup of templated types - thing which can't be easily done
+in C++. Additionally, WrapITK ensures that \verb$SmartPointer$s are always
+returned and acceptable as input, so no bare pointers are ever exposed to
+Python. This is not the case in the standard ITK wrappers.
 
 \end{itemize}
 
 Currently, WrapITK only supports Python properly; Java and Tcl libraries build
 correctly but the Java and Tcl support classes for loading these libraries needs
 some updating.
+
+It have been tested on Mandriva Linux, and MacOS X.
 
 
 
@@ -134,13 +133,15 @@ some updating.
 
 A tarball archive is submitted with the article.
 
-To get the last version, the user can get the last version from the darcs repository
+To get the last version from the darcs repository can be obtained
 with the command 
 \verb$darcs get http://voxel.jouy.inra.fr/darcs/contrib-itk/WrapITK/$.
 
 For the user which don't want to use darcs but want the last development version,
 a nightly updated archive is available at
 \url{http://voxel.jouy.inra.fr/darcs/contrib-itk/WrapITK/WrapITK.tar.gz}.
+
+A rpm package for Mandriva Linux will be available soon.
 
     \subsubsection{CableSwig}
 
@@ -161,15 +162,53 @@ required patches to correct bugs in ITK that must be applied. Follow the
 directions in \verb$WrapITK/patches$ to do so. Additionally, there are some optional
 patches to the ITK source in \verb$WrapITK/patches/optional$ which can be applied to
 either a CVS checkout of ITK or to version 2.4.1. These optional patches provide
-better support for python by providing \verb$__str__$ methods and the like.
+better support for python by providing some methods like \verb$__str__$, or methods
+for standard python sequence interface (see below).
 
     \subsubsection{Build options}
 
 After CableSwig and ITK have been (possibly patched) and built, building WrapITK
-with cmake is simple. Run ccmake in a new directory with the path to the WrapITK
+with cmake is simple. Run \verb$ccmake$ in a new directory with the path to the WrapITK
 source tree as the first argument, and provide the locations of the ITK and
 CableSwig build trees if ccmake so requests. Build options are relatively
 self-explanatory.
+
+The project is provided with defaults build option which should OK for most of
+users. However, for specific needs, you might want to change those options:
+\begin{itemize}
+  \item \verb$WRAP_DIMS$ is the list of dimensions which will be available in the
+target languages. The dimensions must be separated by a semicolon (\verb$;$).
+By default dimensions 2 and 3 are available.
+  \item \verb$WRAP_covariant_vector_double$, \verb$OFF$ by default.
+  \item \verb$WRAP_covariant_vector_float$, \verb$ON$ by default.
+  \item \verb$WRAP_double$ \verb$OFF$, by default.
+  \item \verb$WRAP_float$ \verb$ON$, by default. Note that it is the only signed
+type selected by default, so you will have to use floats to manipulate signed
+values.
+  \item \verb$WRAP_rgb_unsigned_char$, \verb$ON$ by default.
+  \item \verb$WRAP_rgb_unsigned_short$, \verb$OFF$ by default.
+  \item \verb$WRAP_signed_char$, \verb$OFF$ by default.
+  \item \verb$WRAP_signed_long$, \verb$OFF$ by default.
+  \item \verb$WRAP_signed_short$, \verb$OFF$ by default.
+  \item \verb$WRAP_unsigned_char$, \verb$OFF$ by default.
+  \item \verb$WRAP_unsigned_long$, \verb$OFF$ by default. Some filters, like
+\verb$WatershedImageFilter$ require this type. Some filters to return to a
+wrapped type from \verb$unsigned long$ are provided, even if this option is
+set to \verb$OFF$.
+  \item \verb$WRAP_unsigned_short$, \verb$ON$ by default. \verb$unsigned short$
+is the only integer type available by default. This type have been choose rather
+than \verb$unsigned char$ to be able to manipulate 8-bits as well as 16-bits images,
+and to be able to manipulate labeled images more than 255 labels. It is still
+possible to save images with the \verb$unsigned char$ type, even if
+\verb$WRAP_unsigned_char$ is set to \verb$OFF$.
+  \item \verb$WRAP_vector_double$, \verb$OFF$ by default.
+  \item \verb$WRAP_vector_float$, \verb$ON$ by default.
+
+\end{itemize}
+
+The user should modify those options carefully: activate all the types, and/or
+add lots of dimensions will produce very large binary files which will take lots
+of memory once loaded.
 
 Note that each individual filter that is wrapped can declare which dimensions it
 should be wrapped for, and what image types it can accept. For example, a filter
@@ -180,8 +219,11 @@ floating point types (e.g. double or float) in ccmake. Thus, the ccmake
 configuration specifies the maximum possible range of image and filter types to
 be created, and each filter is wrapped for some subset of that range. 
 
+Note that you should always build your project outside the source tree.
+
     \subsubsection{Install WrapITK or use it in the build tree}
 
+Once built, WrapITK can be installed or used in place.
 
   \subsection{Python usage}
 
@@ -189,12 +231,12 @@ be created, and each filter is wrapped for some subset of that range.
 
 If WrapITK has been installed, then using it from within python is trivial:
 simply issue the command \verb$import itk$, and you are ready to go. This
-is because WrapITK installs a pth file in the python site-packages directory so
+is because WrapITK installs a pth file in the python \verb$site-packages$ directory so
 that python knows where to find the itk scripts.
 
 If WrapITK has not been installed, then you will either need to set the
 \verb$PYTHONPATH$ environment variable to contain the directory
-\verb$/path-to-WrapITK-build/Python$, add  this path to sys.paths within python, or
+\verb$/path-to-WrapITK-build/Python$, add  this path to \verb$sys.paths$ within python, or
 start python from that directory. After this, \verb$import itk$ will work
 properly.
 
@@ -203,47 +245,188 @@ properly.
 
 Most class in the itk python module are "template proxy classes" that
 encapsulate all of the template instantiations that were created at build time.
-If three-dimensional unsigned char and unsigned short image types were created,
+If three-dimensional \verb$unsigned char$ and \verb$unsigned short$ image types were created,
 they can be accessed as follows:
 \begin{itemize}
-  \item \verb$itk.Image[itk.UC, 3]$ or \verb$itk.Image.UC3$
-  \item \verb$itk.Image[itk.US, 3]$ or \verb$itk.Image.US3$
+  \item \verb$itk.Image[itk.UC, 3]$
+  \item \verb$itk.Image[itk.US, 3]$
 \end{itemize}
+Note that the C type \verb$unsigned char$ is given with \verb$itk.UC$, and \verb$unsigned short$
+with \verb$itk.US$.
+
+The template parameters can also be put in a variable, and declared once
+in a script:
+\begin{verbatim}
+dim = 3
+pixelType = itk.UC
+imageType = itk.Image[pixelType, dim]
+
+image = imageType.New()
+\end{verbatim}
+This construction is similar to what is done in C++, and make it easy to change
+the dimension used for example - it can even be changed at run-time.
+
+A more convenient syntaxe for usage in interpreter is also available:
+\begin{itemize}
+  \item \verb$itk.Image.UC3$
+  \item \verb$itk.Image.US3$
+\end{itemize}
+\verb$itk.Image.UC3$ refere to the same class than \verb$itk.Image[itk.UC, 3]$
+but have the advantage to allow the usage of tab completion in the interpreter,
+and so let the user easily know which template arguments he can use.
+However, this notation is more rigid than the one above and won't let the user
+specify the type and the type and the dimension used in a single place, and thus,
+should be use only in interpreter.
+
 
 Filters templated on images can be similarly accessed:
 \begin{itemize}
   \item \verb$itk.ImageFileReader[itk.Image[itk.UC,3]]$
   \item or \verb$itk.ImageFileReader[itk.Image.UC3]$
-  \item or even \verb$itk.ImageFileReader[image]$ if \verb$image$ is of type \verb$UC3$.
+  \item or \verb$itk.ImageFileReader.IUC3$
+  \item or \verb$itk.ImageFileReader[imageType]$
+  \item or even with an instance of class used as template parameter: \verb$itk.ImageFileReader[image]$.
 \end{itemize}
 This makes it easy to write generic routines which
-can deal with any input image type.
+can deal with any input image type. For example, an function which take an image
+as parameter and write it to a file without having to give the image type can be:
+\begin{verbatim}
+def write( image, fileName ) :
+    writer = itk.ImageFileWriter[ image ].New()
+    writer.SetFileName( fileName )
+    writer.SetInput( image )
+    writer.Update()
+\end{verbatim}
+
 
 Each class has a \verb$New()$ method which returns a smart pointer to that class. The
 \verb$New()$ method in python has some additional features:
 \begin{itemize}
   \item Arguments to the new method are assumed to be filter inputs. So you could
 write:
-\small \begin{verbatim}
+\begin{verbatim}
 adder = itk.AddImageFilter[...].New()
-adder.SetInput1(inputA)
-adder.SetInput2(inputB)
-\end{verbatim} \normalsize
+adder.SetInput1( readerA.GetOutput() )
+adder.SetInput2( readerB.GetOutput() )
+\end{verbatim}
 or you could write
-\small \begin{verbatim}
-adder = itk.AddImageFilter[...].New(inputA, inputB)
-\end{verbatim} \normalsize
+\begin{verbatim}
+adder = itk.AddImageFilter[...].New( readerA.GetOutput(), readerB.GetOutput() )
+\end{verbatim}
+or even
+\begin{verbatim}
+adder = itk.AddImageFilter[...].New( readerA, readerB )
+\end{verbatim}
+In that case, \verb$New$ will use the \verb$GetOutput()$ of the object if it
+exist to get the image, and the inputs of the new filter.
 
   \item Additionally, keyword arguments are allowed as well. Keyword arguments cause
 the corresponding \verb$Set...$ method to be called, so you could write the
 following:
-\small \begin{verbatim}
+\begin{verbatim}
 itk.ImageFileWriter[image].New(image, FileName="foo.tif")
-\end{verbatim} \normalsize
+\end{verbatim}
 or
-\small \begin{verbatim}
+\begin{verbatim}
 itk.ImageFileWriter[image].New(Input=image, FileName="foo.tif")
-\end{verbatim} \normalsize
+\end{verbatim}.
+
+\end{itemize}
+
+With that notation, the \verb$write$ function becomes more simple:
+\begin{verbatim}
+def write( image, fileName ) :
+    writer = itk.ImageFileWriter[ image ].New( image, FileName=fileName )
+    writer.Update()
+\end{verbatim}
+
+and, more important, most of classes can be instanciated and parametered in one line,
+which make ITK less verbose, and a lots more easy to use in the interpreter.
+
+     \subsubsection{Python specific functions}
+
+Some convenient functions are provided with the itk module. They all begin with a lower
+case character to clearly show they are not part of ITK.
+\begin{itemize}
+  \item \verb$itk.image( object )$ try to return an image from the object given in
+parameter. This function is used in most of the next functions to allow the user to
+pass an image or a filter.
+
+  \item \verb$itk.range( object )$ return the range of values of an image in a tuple.
+\verb$object$ can be an image or a filter. In case of a filter, \verb$itk.image()$ is used
+to get the output image of the filter. The function update the pipeline by calling
+\verb$UpdateOutputInformation()$ and \verb$Update()$.
+
+Example:
+\begin{verbatim}
+1> import itk
+
+2> reader = itk.ImageFileReader.IUC2.New(FileName="cthead1.png")
+
+3> itk.range(reader)
+3> (0, 255)
+\end{verbatim}
+
+
+  \item \verb$itk.size( object )$ return the size of an image.
+\verb$object$ can be an image or a filter. In case of a filter, \verb$itk.image()$ is used
+to get the output image of the filter. The function update only the information of the
+pipeline, by calling \verb$UpdateOutputInformation()$, but don't trigger a full update
+of the pipeline.
+
+Example:
+\begin{verbatim}
+4> itk.size(reader)
+4> <C itk::Size<(2)> instance at _d40b8a09_p_itk__SizeT2_t>
+
+5> print itk.size(reader)
+<Size [256, 256]>
+
+6> list(itk.size(reader))
+6> [256, 256]
+\end{verbatim}
+Note that commands 5 and 6 can be used only with the optional patches.
+
+  \item \verb$itk.template( object )$ returns the template class and parameters
+of a class or instance of this class.
+
+Example:
+\begin{verbatim}
+7> itk.template(reader)
+7> (<itkTemplate itk::ImageFileReader>, (<class 'itkImage.itkImageUC2'>,))
+\end{verbatim}
+
+  \item \verb$itk.write( object, fileName )$ write an image in a file, without
+having to pass the image type.
+\verb$object$ can be an image or a filter. In case of a filter, \verb$itk.image()$ is used
+to get the output image of the filter. The function update the pipeline by calling
+\verb$UpdateOutputInformation()$ and \verb$Update()$.
+
+Example:
+\begin{verbatim}
+8> itk.write(reader, 'out.png')
+\end{verbatim}
+
+  \item \verb$itk.show()$, \verb$itk.show2D()$ and \verb$itk.show3D()$ are used to
+display images. \verb$itk.show2D()$ requires to have \verb$imview$ installed.
+\verb$itk.show3D()$ requires to have ItkVtk, PyQt, and iPython installed, and to use
+iPython with the \verb$-qthread$ option.
+
+\verb$itk.show()$ call the best viewer according to the image type.
+
+\verb$itk.show2D()$
+can be called with a 3D image as parameter to show the image slice by slice.
+
+\verb$itk.show3D()$ display a volumic rendering of the image. See Figure~\ref{screenshot}.
+
+\begin{figure}[htbp]
+\centering
+\includegraphics[scale=0.18]{capture1}
+\caption{A screenshot of WrapITK in action.\label{screenshot}}
+\end{figure}
+
+
+  \item \verb$itk.strel$
 
 \end{itemize}
 
@@ -285,9 +468,11 @@ smartPtr = itk.SmartPointer[image](image.GetPointer())
 
     \subsection{TCL usage}
 
+Write me.
+
     \subsection{Java usage}
 
-
+Write me.
 
 \section{Developer guide}
 
